feat: support of multi-values properties has been added (draft 02);

--- a/gluu/code/plugins/cert-authn_plugin/src/main/resources/assets/cert-detail.zul
+++ b/gluu/code/plugins/cert-authn_plugin/src/main/resources/assets/cert-detail.zul
@@ -33,41 +33,62 @@
                                     <i class="fas fa-bookmark" data-fa-transform="rotate--30 shrink-9 down-4 right-8"></i>
                                 </span>
 
-                                <p class="ml3 mb0">
-                                	<z:label sclass="f5 dark-blue2" value="@load(empty each.formattedCommonName ? c:l('general.no_named') : each.formattedCommonName)" />
-                                    <br />
+                                <p class="ml3 mb0 mt0">
+                                	<z:label sclass="f5 dark-blue2 nb1" value="Subject:"/>
+                                	<br/>
+                                	<z:label sclass="f5 mh4 mv0 dark-blue2 nb1" value="@load(empty each.formattedCommonName ? c:l('general.no_named') : each.formattedCommonName)"/>
+                                    <br/>
 
-                                    <zk:zk unless="${empty each.organization}">
-                                    	<label>Organization:</label>
-                                    	<br />
-                                    	
-		<zk:zscript>
-			List aList = new LinkedList();
-			aList.add("a");
-			aList.add("b");
-			aList.add("c");
-			int listSize = aList.size();
-		</zk:zscript>
+										<zk:zk unless="${empty each.commonName}">
+											<zk:zk forEach="${each.commonName}">
+											 	<label class="w4 mh4 mv0 truncate nb1">Common Name</label>
+												${forEachStatus.current}
+												<br/>
+											</zk:zk>
+										</zk:zk>
 
-		<z:label value="Size (list): ${listSize}" />
-		<br />
-		<z:label value="Size (organization): ${each.organization.size()}" />
-		<br />		
-             	
-                                    	<label>Organization[0]:="${each.organization[0]}"</label>
-                                    	<br />
-                                    	<label>Organization[1]:="${each.organization[1]}"</label>
-                                    	<br />
+										<zk:zk unless="${empty each.organizationUnit}">
+											<zk:zk forEach="${each.organizationUnit}">
+											 	<label class="w4 mh4 mv0 truncate nb1">Organization Unit</label>
+												${forEachStatus.current}
+												<br/>
+											</zk:zk>
+										</zk:zk>
+										
+										<zk:zk unless="${empty each.organization}">
+											<zk:zk forEach="${each.organization}">
+											 	<label class="w4 mh4 mv0 truncate nb1">Organization</label>
+												${forEachStatus.current}
+												<br/>
+											</zk:zk>
+										</zk:zk>
 
-										<zk:zk forEach="${each.organization}">
-											<label>Item:</label>
-											<z:label value="${forEachStatus.current}" />											
-											<br />
-										</zk:zk>                                    
-										<br/>
+										<zk:zk unless="${empty each.location}">
+											<zk:zk forEach="${each.location}">
+											 	<label class="w4 mh4 mv0 truncate nb1">Location</label>
+												${forEachStatus.current}
+												<br/>
+											</zk:zk>
+										</zk:zk>
+
+										<zk:zk unless="${empty each.state}">
+											<zk:zk forEach="${each.state}">
+											 	<label class="w4 mh4 mv0 truncate nb1">State</label>
+												${forEachStatus.current}
+												<br/>
+											</zk:zk>
+										</zk:zk>
+
+										<zk:zk unless="${empty each.country}">
+											<zk:zk forEach="${each.country}">
+											 	<label class="w4 mh4 mv0 truncate nb1">Country</label>
+												${forEachStatus.current}
+												<br/>
+											</zk:zk>
+										</zk:zk>
 
                                     <zk:zk unless="${empty each.formattedCommonName}">
-                                        <label class="w4 ma0 truncate nb1">${labels.usercert.expires}</label>
+                                        <label class="w4 mh4 mv0 truncate nb1">${labels.usercert.expires}</label>
                                         <z:label value="@load(each.expirationDate) @converter('org.gluu.casa.ui.CustomDateConverter',
                                         format='MMM d, yyyy - hh:mm a', offset = sessionContext.zoneOffset)"/>
                                     </zk:zk>
@@ -79,8 +100,6 @@
                                             ${labels.usercert.expired}
                                         </span>
                                     </zk:zk>
-                                    
- 									</zk:zk>                                    
                                 </p>
                             </div>
                             <div class="pl2 pt2">
