--- a/gluu/code/plugins/cert-authn_plugin/src/main/resources/assets/cert-detail.zul
+++ b/gluu/code/plugins/cert-authn_plugin/src/main/resources/assets/cert-detail.zul
@@ -34,62 +34,63 @@
                                 </span>
 
                                 <p class="ml3 mb0 mt0">
-                                	<z:label sclass="f5 dark-blue2 nb1" value="Subject:"/>
+                                	<z:label sclass="f5 ml1 nb1 bb" value="Subject:"/>
                                 	<br/>
-                                	<z:label sclass="f5 mh4 mv0 dark-blue2 nb1" value="@load(empty each.formattedCommonName ? c:l('general.no_named') : each.formattedCommonName)"/>
+                                	<z:label sclass="f5 mh3 mv0 dib dark-blue2 nb1" value="@load(empty each.formattedCommonName ? c:l('general.no_named') : each.formattedCommonName)"/>
                                     <br/>
 
 										<zk:zk unless="${empty each.commonName}">
 											<zk:zk forEach="${each.commonName}">
-											 	<label class="w4 mh4 mv0 truncate nb1">Common Name</label>
-												${forEachStatus.current}
+											 	<label class="w4 ml3 mv0 dib truncate nb1">Common Name</label>
+											 	<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${forEachStatus.current}"/>
 												<br/>
 											</zk:zk>
 										</zk:zk>
 
 										<zk:zk unless="${empty each.organizationUnit}">
 											<zk:zk forEach="${each.organizationUnit}">
-											 	<label class="w4 mh4 mv0 truncate nb1">Organization Unit</label>
-												${forEachStatus.current}
+											 	<label class="w4 ml3 mv0 dib truncate nb1">Organization Unit</label>
+											 	<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${forEachStatus.current}"/>
 												<br/>
 											</zk:zk>
 										</zk:zk>
 										
 										<zk:zk unless="${empty each.organization}">
 											<zk:zk forEach="${each.organization}">
-											 	<label class="w4 mh4 mv0 truncate nb1">Organization</label>
-												${forEachStatus.current}
+											 	<label class="w4 ml3 mv0 dib truncate nb1">Organization</label>
+												<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${forEachStatus.current}"/>
 												<br/>
 											</zk:zk>
 										</zk:zk>
 
 										<zk:zk unless="${empty each.location}">
 											<zk:zk forEach="${each.location}">
-											 	<label class="w4 mh4 mv0 truncate nb1">Location</label>
-												${forEachStatus.current}
+											 	<label class="w4 ml3 mv0 dib truncate nb1">Location</label>
+												<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${forEachStatus.current}"/>
 												<br/>
 											</zk:zk>
 										</zk:zk>
 
 										<zk:zk unless="${empty each.state}">
 											<zk:zk forEach="${each.state}">
-											 	<label class="w4 mh4 mv0 truncate nb1">State</label>
-												${forEachStatus.current}
+											 	<label class="w4 ml3 mv0 dib truncate nb1">State</label>
+												<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${forEachStatus.current}"/>
 												<br/>
 											</zk:zk>
 										</zk:zk>
 
 										<zk:zk unless="${empty each.country}">
 											<zk:zk forEach="${each.country}">
-											 	<label class="w4 mh4 mv0 truncate nb1">Country</label>
-												${forEachStatus.current}
+											 	<label class="w4 ml3 mv0 dib truncate nb1">Country</label>
+												<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${forEachStatus.current}"/>
+												<img alt="${forEachStatus.current.toLowerCase()}" src="img/${forEachStatus.current.toLowerCase()}_32.png"></img>
 												<br/>
 											</zk:zk>
 										</zk:zk>
 
                                     <zk:zk unless="${empty each.formattedCommonName}">
-                                        <label class="w4 mh4 mv0 truncate nb1">${labels.usercert.expires}</label>
-                                        <z:label value="@load(each.expirationDate) @converter('org.gluu.casa.ui.CustomDateConverter',
+                                        <label class="w4 ml3 mv0 dib truncate nb1">${labels.usercert.expires}</label>
+                                        <z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="@load(each.expirationDate) @converter('org.gluu.casa.ui.CustomDateConverter',
                                         format='MMM d, yyyy - hh:mm a', offset = sessionContext.zoneOffset)"/>
                                     </zk:zk>
 
@@ -100,6 +101,62 @@
                                             ${labels.usercert.expired}
                                         </span>
                                     </zk:zk>
+                                    <zk:zk unless="${each.expired}">
+										<br/>                                    
+                                    </zk:zk>
+                                    
+									<z:label sclass="f5 ml1 nb1 bb" value="Issuer:"/>
+                                	<br/>
+                                	<z:label sclass="f5 mh3 mv0 dib dark-blue2 nb1" value="@load(empty each.issuerCertificate.formattedCommonName ? c:l('general.no_named') : each.issuerCertificate.formattedCommonName)"/>
+                                	<br/>								
+								
+										<zk:zk unless="${empty each.issuerCertificate.commonName}">
+											<zk:zk forEach="${each.issuerCertificate.commonName}">
+											 	<label class="w4 ml3 mv0 dib truncate nb1">Common Name</label>
+											 	<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${forEachStatus.current}"/>											
+												<br/>
+											</zk:zk>
+										</zk:zk>
+
+										<zk:zk unless="${empty each.issuerCertificate.organizationUnit}">
+											<zk:zk forEach="${each.issuerCertificate.organizationUnit}">
+											 	<label class="w4 ml3 mv0 dib truncate nb1">Organization Unit</label>
+											 	<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${forEachStatus.current}"/>											
+												<br/>
+											</zk:zk>
+										</zk:zk>
+										
+										<zk:zk unless="${empty each.issuerCertificate.organization}">
+											<zk:zk forEach="${each.issuerCertificate.organization}">
+											 	<label class="w4 ml3 mv0 dib truncate nb1">Organization</label>
+											 	<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${forEachStatus.current}"/>											
+												<br/>
+											</zk:zk>
+										</zk:zk>
+
+										<zk:zk unless="${empty each.issuerCertificate.location}">
+											<zk:zk forEach="${each.issuerCertificate.location}">
+											 	<label class="w4 ml3 mv0 dib truncate nb1">Location</label>
+											 	<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${forEachStatus.current}"/>											
+												<br/>
+											</zk:zk>
+										</zk:zk>
+
+										<zk:zk unless="${empty each.issuerCertificate.state}">
+											<zk:zk forEach="${each.issuerCertificate.state}">
+											 	<label class="w4 ml3 mv0 dib truncate nb1">State</label>
+											 	<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${forEachStatus.current}"/>											
+												<br/>
+											</zk:zk>
+										</zk:zk>
+
+										<zk:zk unless="${empty each.issuerCertificate.country}">
+											<zk:zk forEach="${each.issuerCertificate.country}">
+											 	<label class="w4 ml3 mv0 dib truncate nb1">Country</label>
+											 	<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${forEachStatus.current}"/>											
+												<br/>
+											</zk:zk>
+										</zk:zk>
                                 </p>
                             </div>
                             <div class="pl2 pt2">
