--- a/gluu/code/plugins/cert-authn_plugin/src/main/resources/assets/cert-detail.zul
+++ b/gluu/code/plugins/cert-authn_plugin/src/main/resources/assets/cert-detail.zul
@@ -81,9 +81,14 @@
 
 										<zk:zk unless="${empty each.country}">
 											<zk:zk forEach="${each.country}">
-												 	<label class="w4 ml3 mv0 dib truncate nb1">Country</label>
-													<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${forEachStatus.current}"/>
-													<img alt="${forEachStatus.current}" style="height: 1.2rem; margin-bottom: 0.1rem; margin-left: 0.2rem;" src="img/flags_32/${forEachStatus.current.toLowerCase()}_32.png"></img>
+											 	<label class="w4 ml3 mv0 dib truncate nb1">Country</label>
+												<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${each}"/>
+												<zk:zk if="${vm.getIsCountryValid(each)}">
+													<img alt="${each}" style="height: 1.2rem; margin-bottom: 0.1rem; margin-left: 0.2rem;" src="img/flags_32/${each.toLowerCase()}_32.png"/>
+												</zk:zk>
+												<zk:zk unless="${vm.getIsCountryValid(each)}">
+													<z:label sclass="mv0 dib text-danger nb1" value="No Flag"/>
+												</zk:zk>
 												<br/>
 											</zk:zk>
 										</zk:zk>
@@ -153,8 +158,13 @@
 										<zk:zk unless="${empty each.issuerCertificate.country}">
 											<zk:zk forEach="${each.issuerCertificate.country}">
 											 	<label class="w4 ml3 mv0 dib truncate nb1">Country</label>
-											 	<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${forEachStatus.current}"/>
-												<img alt="${forEachStatus.current}" style="height: 1.2rem; margin-bottom: 0.1rem; margin-left: 0.2rem;" src="img/flags_32/${forEachStatus.current.toLowerCase()}_32.png"></img>
+											 	<z:label sclass="ml4 mv0 dib dark-blue2 nb1" value="${each}"/>
+												<zk:zk if="${vm.getIsCountryValid(each)}">
+													<img alt="${each}" style="height: 1.2rem; margin-bottom: 0.1rem; margin-left: 0.2rem;" src="img/flags_32/${each.toLowerCase()}_32.png"/>
+												</zk:zk>
+												<zk:zk unless="${vm.getIsCountryValid(each)}">
+													<z:label sclass="mv0 dib text-danger nb1" value="No Flag"/>
+												</zk:zk>
 												<br/>
 											</zk:zk>
 										</zk:zk>
